--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/sigmund-logo-180x180.png"
+      href="assets/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/sigmund logo-32x32.png"
+      href="assets/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/sigmund logo-16x16.png"
+      href="assets/favicon/favicon-16x16.png"
     />
 
     <!--Styles-->
@@ -51,13 +51,15 @@
     <h1>SIGMUND VOIDPOSTING</h1>
 
     <h4 style="color: blue">Check us out on Facebook, Instgram and Youtube!</h4>
-    <div>
+    <div style="flex-wrap: inline-block">
       <span>
         <a href="https://www.facebook.com/CitizensOfTheVoid"> Facebook </a>
       </span>
+      <p></p>
       <span>
         <a href="https://www.instagram.com/sigmundvoid_bdf/"> Instagram </a>
       </span>
+      <p></p>
       <span>
         <a href="https://www.youtube.com/@sigmundvoid2525"> Youtube </a>
       </span>
