added css stylesheet

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       href="assets/favicon/favicon-16x16.png"
     />
 
+    <!--CSS link-->
+
+    <link rel="stylesheet" href="style.css" />
+
     <!--Styles-->
 
     <style>
