fixed favicon by moving to main folder

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!--favicon-->
 
     <link
+      rel="shortcut icon"
+      href="assets/favicon/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
@@ -68,5 +73,6 @@
         <a href="https://www.youtube.com/@sigmundvoid2525"> Youtube </a>
       </span>
     </div>
+    <img src="assets/images/sigmund-logo-original.png" alt="SIGMMMUUUUHHHHHHHHH">
   </body>
 </html>
