added header, main and footer

--- a/index.html
+++ b/index.html
@@ -57,22 +57,33 @@
   !
 
   <body>
-    <h1>SIGMUND VOIDPOSTING</h1>
 
-    <h4 style="color: blue">Check us out on Facebook, Instgram and Youtube!</h4>
-    <div style="flex-wrap: inline-block">
-      <span>
-        <a href="https://www.facebook.com/CitizensOfTheVoid"> Facebook </a>
-      </span>
-      <p></p>
-      <span>
-        <a href="https://www.instagram.com/sigmundvoid_bdf/"> Instagram </a>
-      </span>
-      <p></p>
-      <span>
-        <a href="https://www.youtube.com/@sigmundvoid2525"> Youtube </a>
-      </span>
-    </div>
-    <img src="assets/images/sigmund-logo-original.png" alt="SIGMMMUUUUHHHHHHHHH">
+    <header>
+        <h1>SIGMUND VOIDPOSTING</h1>
+    </header>
+    
+    <main>
+    <img src="assets/images/sigmund-logo-original.png" alt="SIGMUUUUHHHHHHNNNNNDDDDDD">
+    </main>
+    <footer>
+
+        <h4 style="color: blue">Check us out on Facebook, Instgram and Youtube!</h4>
+
+        <div style="flex-wrap: inline-block">
+            <span>
+                <a href="https://www.facebook.com/CitizensOfTheVoid"> Facebook </a>
+            </span>
+            <p></p>
+            <span>
+                <a href="https://www.instagram.com/sigmundvoid_bdf/"> Instagram </a>
+            </span>
+            <p></p>
+            <span>
+                <a href="https://www.youtube.com/@sigmundvoid2525"> Youtube </a>
+            </span>
+
+        </div>
+
+    </footer>
   </body>
 </html>
