solidified footer and added shadow

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SIGMUND VOIDPOSTING™</title>
-    <description>Bradford's gnarliest band</description>
+    <meta name="description" content="Bradford's gnarliest band" />
+    <meta
+      name="keywords"
+      content="metal, noise, grunge, punk, death, crazy, new, music, bradford, underground, wireless, rewired, tickets, events"
+    />
 
     <!--favicon-->
-
     <link
       rel="shortcut icon"
       href="assets/favicon/favicon.ico"
@@ -34,17 +37,11 @@
 
     <!--CSS link-->
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <!--Styles-->
 
     <style>
-      h1,
-      h4,
-      div {
-        text-align: center;
-      }
-
       a {
         color: green;
       }
@@ -54,36 +51,37 @@
       }
     </style>
   </head>
-  !
-
   <body>
-
     <header>
+      <a href="index.html">
         <h1>SIGMUND VOIDPOSTING</h1>
+      </a>
     </header>
-    
+
     <main>
-    <img src="assets/images/sigmund-logo-original.png" alt="SIGMUUUUHHHHHHNNNNNDDDDDD">
+      <img
+        src="assets/images/sigmund-logo-original.png"
+        alt="SIGMUUUUHHHHHHNNNNNDDDDDD"
+      />
     </main>
-    <footer>
+    <footer font-family="Sixtyfour">
+      <h4 style="color: rgb(57, 172, 166)">
+        Check us out on Facebook, Instgram and Youtube!
+      </h4>
 
-        <h4 style="color: blue">Check us out on Facebook, Instgram and Youtube!</h4>
-
-        <div style="flex-wrap: inline-block">
-            <span>
-                <a href="https://www.facebook.com/CitizensOfTheVoid"> Facebook </a>
-            </span>
-            <p></p>
-            <span>
-                <a href="https://www.instagram.com/sigmundvoid_bdf/"> Instagram </a>
-            </span>
-            <p></p>
-            <span>
-                <a href="https://www.youtube.com/@sigmundvoid2525"> Youtube </a>
-            </span>
-
-        </div>
-
+      <div style="flex-wrap: inline-block">
+        <span>
+          <a href="https://www.facebook.com/CitizensOfTheVoid"> Facebook </a>
+        </span>
+        <p></p>
+        <span>
+          <a href="https://www.instagram.com/sigmundvoid_bfd/"> Instagram </a>
+        </span>
+        <p></p>
+        <span>
+          <a href="https://www.youtube.com/@sigmundvoid2525"> Youtube </a>
+        </span>
+      </div>
     </footer>
   </body>
 </html>
