adjusted background image to fit page

--- a/index.html
+++ b/index.html
@@ -54,34 +54,56 @@
   <body>
     <header>
       <a href="index.html">
-        <h1>SIGMUND VOIDPOSTING</h1>
+        <h1 style="margin: top 80px">SIGMUND VOIDPOSTING</h1>
       </a>
     </header>
 
     <main>
-      <img
-        src="assets/images/sigmund-logo-original.png"
-        alt="SIGMUUUUHHHHHHNNNNNDDDDDD"
-      />
+        <img
+            width="100%"
+          src="assets/images/sigmund-logo-original.png"
+          alt="SIGMUUUUHHHHHHNNNNNDDDDDD"
+        z-index=0
+        style="display:flex"/>
     </main>
+
     <footer font-family="Sixtyfour">
-      <h4 style="color: rgb(57, 172, 166)">
+      <h4 style="color: rgb(5, 252, 239)">
         Check us out on Facebook, Instgram and Youtube!
       </h4>
 
-      <div style="flex-wrap: inline-block">
-        <span>
-          <a href="https://www.facebook.com/CitizensOfTheVoid"> Facebook </a>
-        </span>
-        <p></p>
-        <span>
-          <a href="https://www.instagram.com/sigmundvoid_bfd/"> Instagram </a>
-        </span>
-        <p></p>
-        <span>
-          <a href="https://www.youtube.com/@sigmundvoid2525"> Youtube </a>
-        </span>
-      </div>
+      <ul id="links">
+        <li>
+          <a
+            href="https://www.facebook.com/CitizensOfTheVoid"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"
+          >
+            Facebook
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/sigmundvoid_bfd/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"
+          >
+            Instagram
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/@sigmundvoid2525"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Youtube page (opens in a new tab)"
+          >
+            Youtube
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
