--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <body>
     <header>
       <a href="index.html">
-        <h1 style="margin: top 80px">SIGMUND VOIDPOSTING</h1>
+        <h1 style="margin: top 80px; display:flex">SIGMUND VOIDPOSTING</h1>
       </a>
     </header>
 
