made header smaller to fit screen

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <body>
     <header>
       <a href="index.html">
-        <h1 style="margin: top 80px; display:flex">SIGMUND VOIDPOSTING</h1>
+        <h1>SIGMUND VOIDPOSTING</h1>
       </a>
     </header>
 
@@ -69,7 +69,7 @@
 
     <footer font-family="Sixtyfour">
       <h4 style="color: rgb(5, 252, 239)">
-        Check us out on Facebook, Instgram and Youtube!
+        Check us out on our socials!
       </h4>
 
       <ul id="links">
