added some cover text

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
     </header>
 
     <main>
-        <img
-            width="100%"
-          src="assets/images/sigmund-logo-original.png"
-          alt="SIGMUUUUHHHHHHNNNNNDDDDDD"
-        z-index=0
-        style="display:flex"/>
+        <section id="logo-section">
+            <img width="100%" src="assets/images/sigmund-logo-original.png" alt="SIGMUUUUHHHHHHNNNNNDDDDDD" z-index=0 />
+            <div id="cover-text">
+                <h2>Bradfords</h2>
+                <h3>gnarliest</h3>
+                <h2>band!!!</h2>
+            </div>
+        </section>
     </main>
 
     <footer font-family="Sixtyfour">
