added a navigation menu

--- a/signup.html
+++ b/signup.html
@@ -36,16 +36,27 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 style="margin: top 80px">SIGMUND VOIDPOSTING</h1>
+            <h1>SIGMUND VOIDPOSTING</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle">
+            menu
+        </label>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Artwork</a></li>
+                <li><a href="signup.html" class="active">Newsletter</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <img style="display: flex" src="assets/images/sigmund-logo-original.png" alt="SIGMUUUUHHHHHHNNNNNDDDDDD" />
+        
     </main>
     <footer font-family="Sixtyfour">
         <h4 style="color: rgb(5, 252, 239)">
-            Check us out on Facebook, Instgram and Youtube!
+            Check us out on our socials!
         </h4>
 
         <ul id="links">
