--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
       <a href="index.html">
         <h1>SIGMUND VOIDPOSTING</h1>
       </a>
+    <input type="checkbox" id="nav-toggle" name="nav-toggle">
+    <label for="nav-toggle">
+        menu
+    </label>
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="gallery.html">Artwork</a></li>
+            <li><a href="signup.html">Newsletter</a></li>
+        </ul>
+    </nav>
     </header>
 
     <main>
