added links to other pages

--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,9 @@
             color: pink;
         }
     </style>
+
+    <!--Adds the fontawesome kit-->
+    <script src="https://kit.fontawesome.com/0c86c72b21.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -39,8 +42,8 @@
             <h1>SIGMUND VOIDPOSTING</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle">
-            menu
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-skull-crossbones"></i>
         </label>
         <nav>
             <ul id="menu">
@@ -52,8 +55,9 @@
     </header>
 
     <main>
-
+        
     </main>
+
     <footer font-family="Sixtyfour">
         <h4 style="color: rgb(5, 252, 239)">
             Check us out on our socials!
@@ -62,15 +66,21 @@
         <ul id="links">
             <li>
                 <a href="https://www.facebook.com/CitizensOfTheVoid" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"> Facebook </a>
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    Facebook
+                </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/sigmundvoid_bfd/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"> Instagram </a>
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    Instagram
+                </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/@sigmundvoid2525" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"> Youtube </a>
+                    aria-label="Visit our Youtube page (opens in a new tab)">
+                    Youtube
+                </a>
             </li>
         </ul>
     </footer>
