--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         color: pink;
       }
     </style>
+
+    <!--Adds the fontawesome kit-->
+    <script src="https://kit.fontawesome.com/0c86c72b21.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -57,8 +60,8 @@
         <h1>SIGMUND VOIDPOSTING</h1>
       </a>
     <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle">
-        menu
+    <label for="nav-toggle" class="nav-toggle-label">
+        <i class="fa-solid fa-skull-crossbones"></i>
     </label>
     <nav>
         <ul id="menu">
