added signup form and artwork

--- a/gallery.html
+++ b/gallery.html
@@ -55,31 +55,41 @@
     </header>
 
     <main>
-        
+        <section id="gallery">
+            <h2 class="hidden-heading">Artwork</h2>
+            <div id="photos">
+                <img src="assets/images/drugbndr face.png" alt="Sigmund Void Original Artwork">
+                <img src="assets/images/eyeball face.png" alt="Sigmund Void Original Artwork">
+                <img src="assets/images/quade.png" alt="Sigmund Void Original Artwork">
+                <img src="assets/images/stic images.png" alt="Sigmund Void Original Artwork">
+                <img src="assets/images/sticker image.png" alt="Sigmund Void Original Artwork">
+            </div>
+
+        </section>
     </main>
 
     <footer font-family="Sixtyfour">
         <h4 style="color: rgb(5, 252, 239)">
             Check us out on our socials!
         </h4>
-
+    
         <ul id="links">
             <li>
                 <a href="https://www.facebook.com/CitizensOfTheVoid" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
-                    Facebook
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/sigmundvoid_bfd/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
-                    Instagram
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/@sigmundvoid2525" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)">
-                    Youtube
+                    <i class="fa-brands fa-youtube"></i>
                 </a>
             </li>
         </ul>
