--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
                 <h2>band!!!</h2>
             </div>
         </section>
+
+        <section id="aboutus">
+            <h2>A BIT <br>ABOUT US</h2>
+            <div id="rock">
+                <h3>WE ROCK!!</h3>
+                <p>Bringing you the hottest and freshest new sounds you don't know you're ready for! Feast your ears on some of our sounds linked below</p>
+            </div>
+            <div id="roll">
+                <h3>WE ROLL!!</h3>
+                <p>We've been making noise since 2019 with original members Max Brook on guitar and Ato Ame on vocals, with Nick Miles joining on drums later down the line and the most recent member Harry Miles on trumpet!!</p>
+            </div>
+        </section>
     </main>
 
     <footer font-family="Sixtyfour">
@@ -96,7 +108,7 @@
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
           >
-            Facebook
+            <i class="fa-brands fa-facebook"></i>
           </a>
         </li>
         <li>
@@ -106,7 +118,7 @@
             rel="noopener"
             aria-label="Visit our Instagram page (opens in a new tab)"
           >
-            Instagram
+            <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
         <li>
@@ -116,7 +128,7 @@
             rel="noopener"
             aria-label="Visit our Youtube page (opens in a new tab)"
           >
-            Youtube
+            <i class="fa-brands fa-youtube"></i>
           </a>
         </li>
       </ul>
