--- a/signup.html
+++ b/signup.html
@@ -55,31 +55,59 @@
     </header>
 
     <main>
-
+        <section id="signup">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h4><i style="font-size:3em"class="fa-regular fa-bell"></i><br>Wanna be the first to hear the crazy things we're getting up to?</h4>
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name" class="text-input" required>
+                <br>
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" id="last_name" class="text-input" required>
+                <br>
+                <label for="email_address">Email Address</label>
+                <input type="email" name="email_address" id="email_address" class="text-input" required>
+                <br>
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Online</label>
+                        <input type="radio" name="running_preference" id="road" value="road" required checked>
+                    </div>
+                    <div>
+                        <label for="trail">Live</label>
+                        <input type="radio" name="running_preference" id="trail" value="trail" required>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
+                    </div>
+                </div>
+                <button type="submit" class="join-button">Let's Gooo!!!</button>
+            </form>
+        </section>
     </main>
 
     <footer font-family="Sixtyfour">
         <h4 style="color: rgb(5, 252, 239)">
             Check us out on our socials!
         </h4>
-
+    
         <ul id="links">
             <li>
                 <a href="https://www.facebook.com/CitizensOfTheVoid" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
-                    Facebook
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/sigmundvoid_bfd/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
-                    Instagram
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/@sigmundvoid2525" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)">
-                    Youtube
+                    <i class="fa-brands fa-youtube"></i>
                 </a>
             </li>
         </ul>
