added styles for bigger screens

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <main>
         <section id="logo-section">
-            <img width="100%" src="assets/images/sigmund-logo-original.png" alt="SIGMUUUUHHHHHHNNNNNDDDDDD" z-index=0 />
+            <img id=logo width="100%" src="assets/images/sigmund-logo-original.png" alt="SIGMUUUUHHHHHHNNNNNDDDDDD" z-index=0 />
             <div id="cover-text">
                 <h2>Bradfords</h2>
                 <h3>gnarliest</h3>
@@ -82,8 +82,10 @@
             </div>
         </section>
 
+        <h2 id="aboutushead">A BIT <br>ABOUT US</h2>
+
         <section id="aboutus">
-            <h2>A BIT <br>ABOUT US</h2>
+            <h2 class="hidden-heading">About us</h2>
             <div id="rock">
                 <h3>WE ROCK!!</h3>
                 <p>Bringing you the hottest and freshest new sounds you don't know you're ready for! Feast your ears on some of our sounds linked below</p>
