--- a/signup.html
+++ b/signup.html
@@ -78,7 +78,7 @@
                     </div>
                     <div>
                         <label for="both">Both</label>
-                        <input type="radio" name="running_preference" id="both" value="both" required>
+                        <input type="radio" name="listening-preference" id="both" value="both" required>
                     </div>
                 </div>
                 <button type="submit" class="join-button">Let's Gooo!!!</button>
